# cmake_learn

t1/: CMakeLists.txt
t1/cmake/: FindMAX.cmake
t1/src/: CMakeLists.txt  main.cpp
